fix(src/autocomplete): fix scrollbar

--- a/src/autocomplete/theme.scss
+++ b/src/autocomplete/theme.scss
@@ -12,7 +12,7 @@
     :local(.autocomplete-list) {
         box-sizing: border-box;
         max-height: 20vh;
-        overflow-y: scroll;
+        overflow-y: auto;
         box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
         :local(.autocomplete-list-item) {
             display: block;
